--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -20,13 +20,18 @@ office_events is a dictionary with weekday as key and a list of events as value
  tr.event.has_description {
      cursor: help;
  }
+
+ #office_calendar {
+     width: 100%;
+ }
+
 </style>
 {% endaddtoblock %}
 
 {% if office_events %}
 <p style="margin: 0"><b>Kontoret denne uka:</b></p>
 
-<table>
+<table id="office_calendar">
     {% for day,events in office_events %}
     <tr>
         <th colspan="3">{{ day }}</th>
