--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -4,6 +4,7 @@ office_events is a dictionary with weekday as key and a list of events as value
 {% endcomment %}
 {% load sekizai_tags %}
 
+{% if office_events %}
 {% addtoblock "css" %}
 <style>
  /* Office calendar */
@@ -28,25 +29,26 @@ office_events is a dictionary with weekday as key and a list of events as value
 </style>
 {% endaddtoblock %}
 
-{% if office_events %}
 <p style="margin: 0"><b>Kontoret denne uka:</b></p>
 
 <table id="office_calendar">
-    {% for day,events in office_events %}
+    {% for event in office_events %}
+    {% ifchanged event.start_time.date|date:"w" %}
     <tr>
-        <th colspan="3">{{ day }}</th>
+        <th colspan="3">{{ event.start_time|date:"l"|capfirst }}</th>
     </tr>
-    {% for event in events %}
+    {% endifchanged %}
+
     {% if event.description %}
     <tr title="{{ event.description }}" class="event has_description">
     {% else %}
     <tr class="event">
     {% endif %}
+       
         <td>{{ event.start_time|date:"H:i"}}</td>
         <td>{{ event.title }}</td>
         <td>{{ event.duration_natural  }}</td>
     </tr>
-    {% endfor %}
     {% endfor %}
 </table>
 {% endif %}
