Adds group leader email to the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -244,6 +244,8 @@
 
                         <p>Bedrift? Kontakt Bedriftskontakten Nabla på <a class="email" href="mailto:bedkom@nabla.ntnu.no">bedkom@nabla.ntnu.no</a></p>
 
+                        <p>Gruppeledere: <a class="email" href="mailto:gruppeledere@nabla.ntnu.no">gruppeledere@nabla.ntnu.no</a></p>
+
                         <address>
                             Nabla <br>
                             Kjemiblokk 2 <br>
