Adds link to Office Beer account page in user drop down menu.

--- a/templates/base.html
+++ b/templates/base.html
@@ -166,6 +166,7 @@
                                     <li><a href="{% url "auth_logout" %}">Logg ut</a></li>
                                     <li class="divider"></li>
                                     <li><a href="{% url "user_polls" %}">Brukeravstemninger</a></li>
+                                    <li><a href="{% url "officebeer_account" %}">Office Beer</a></li>
                                     <li><a href="{% url "users_birthday" %}">Bursdag</a></li>
                                     <li><a href="{% url "quiz_list" %}">Quiz</a></li>
                                     <li class="divider"></li>
