--- a/templates/nablashop/product_detail.html
+++ b/templates/nablashop/product_detail.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load markdown %}
 
 {% block content %}
     <img class="img img-responsive" style="width: 70%" src="{{ product.photo.url }}"></p>
     <h1>{{ product.name }} - {{ product.price }} kr</h1>
-    <p>{{ product.description }}</p>
+    <p>{{ product.description|markdown }}</p>
 
 
 
