--- a/templates/base.html
+++ b/templates/base.html
@@ -113,6 +113,7 @@
                                     <li><a href="{% url 'nablashop:index' %}" >Nablashop</a></li>
                                     <li><a href="{% url 'wiki:get' 'lovverk/nablas-lover/' %}">Nablas Lover</a></li>
                                     <li><a href="{% url 'wiki:get' 'lovverk/nablas-forskrifter/' %}">Nablas Forskrifter</a></li>
+                                    <li><a href="{% url 'contact' %}">Kontakt</a></li>
                                     {# Hent alle sider som starter på /om/ #}
                                     {% get_flatpages '/om/' as about_pages %}
                                     {% for page in about_pages %}
@@ -269,7 +270,7 @@
 	                </p>
 	                <h2>Tilbakemelding</h2>
                         <p>
-			  Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? Fyll ut <a href="/contact/">kontaktskjema</a> eller kontakt webkom:<br>
+			  Har du funnet en feil, får du ikke logget på, eller er det noe som burde forbedres? Fyll ut <a href="/contact/feedback/">tilbakemeldingskjema</a> eller kontakt webkom:<br>
 			  <a class="email" href="mailto:webkom@nabla.ntnu.no">webkom@nabla.ntnu.no</a>
                         </p>
 	            </div>
