Fixes a bug in previous commit
Basically redos the commit, bug turned out to be in feedback.html

--- a/nablapps/contact/templates/contact/feedback.html
+++ b/nablapps/contact/templates/contact/feedback.html
@@ -23,7 +23,7 @@
 
     <button type="submit">Send</button>
 
-{{ contact_form.right_answer }}
+{{ feedback_form.right_answer }}
 </form>
 
 {% endblock %}
