Adds conctact info to the contact page
The contact page is now, although kinda primitive, ready for deployment.
Some CSS and perhaps more content should be added in the future.

--- a/nablapps/contact/templates/contact/feedback.html
+++ b/nablapps/contact/templates/contact/feedback.html
@@ -6,6 +6,8 @@
 
 <h1>Tilbakemelding</h1>
 
+<p>Dette er Webkoms tilbakemeldingsskjema. Hvis du har funnet en feil på siden, eller har forslag til ny funksjonalitet eller andre forbedringer av nettsiden, er det bare å sende inn en tilbakemelding via skjemaet, så skal Webkom se på det så fort som mulig.</p>
+
 {% if spam_check == True %}
     <p style="color:red;"> Forsøk å regne kontrollspørsmål på nytt</p>
 {% endif %}
