--- a/templates/base.html
+++ b/templates/base.html
@@ -248,7 +248,10 @@
 
                         <p>Gruppeledere: <a class="email" href="mailto:gruppeledere@nabla.ntnu.no">gruppeledere@nabla.ntnu.no</a></p>
 
+                        Øvrig kontaktinformasjon: <a href="/contact/">kontaktside.</a>
+
                         <address>
+                            <br>
                             Nabla <br>
                             Kjemiblokk 2 <br>
                             Sem Sælands vei 10, NTNU <br>
