--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -6,7 +6,14 @@
 
 <h1>Kontakt</h1>
 
-<p>Her kommer kontaktinfo til masse folk i nabla.</p>
+<table style="width:100%">
+    {% for element in mail_list %}
+        <tr>
+            <th>{{ element.0 }}</th>
+            <td><a href="mailto:{{ element.1 }}@nabla.ntnu.no">{{ element.1 }}@nabla.ntnu.no</a></td>
+        </tr>
+    {% endfor %}
+</table>
 
 <h1>Nablas forslagskasse</h1>
 
