--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -6,7 +6,7 @@
 
 <h1>Kontakt</h1>
 
-<table style="width:100%">
+<table class="table table-striped table-bordered" style="width:100%">
     {% for element in mail_list %}
         <tr>
             <th>{{ element.0 }}</th>
