Adds open_for field in info

--- a/nablapps/events/templates/events/includes/info_bedpres.html
+++ b/nablapps/events/templates/events/includes/info_bedpres.html
@@ -10,7 +10,7 @@
 <tr>
     <td>Åpen for trinn</td>
     <td>
-        Todo: Her skal det stå trinn
+        {{ event.open_for_classes }}
     </td>
 </tr>
 {% endblock %}
