--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -6,8 +6,10 @@
 
 <h1>Kontakt</h1>
 
+<h3>Kontaktinfo til styret</h3>
+
 <table class="table table-striped table-bordered" style="width:100%">
-    {% for element in mail_list %}
+    {% for element in board_emails %}
         <tr>
             <th>{{ element.0 }}</th>
             <td><a href="mailto:{{ element.1 }}@nabla.ntnu.no">{{ element.1 }}@nabla.ntnu.no</a></td>
@@ -15,6 +17,31 @@
     {% endfor %}
 </table>
 
+<h3>Øvrige gruppeleder- og stillings-epost</h3>
+
+<table class="table table-striped table-bordered" style="width:100%">
+    {% for element in nabla_pos_emails %}
+        <tr>
+            <th>{{ element.0 }}</th>
+            <td><a href="mailto:{{ element.1 }}@nabla.ntnu.no">{{ element.1 }}@nabla.ntnu.no</a></td>
+        </tr>
+    {% endfor %}
+</table>
+
+<h3>Epost til undergruppene</h3>
+
+<table class="table table-striped table-bordered" style="width:100%">
+    {% for element in group_emails %}
+        <tr>
+            <th>{{ element.0 }}</th>
+            <td><a href="mailto:{{ element.1 }}@nabla.ntnu.no">{{ element.1 }}@nabla.ntnu.no</a></td>
+        </tr>
+    {% endfor %}
+</table>
+
+{% endblock %}
+
+{% block sidebar %}
 <h1>Nablas forslagskasse</h1>
 
 <p>Har du en superkul idé til noe nytt vi kan gjøre i Nabla? Savner du noe, eller har du en tilbakemelding til oss som drifter linjeforeningen?
