Adds the picture of the "fadderperiode"-program to the new student popup

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     </head>
 
     <body>
-    <!-- Pop up window displaying important information about the 'fadderperiode' -->
+<!-- Pop up window displaying important information about the 'fadderperiode' -->
 	{% if newuser_popup %}
 	<div id="new_student_info">
 	  <h2>Ny student?</h2>
@@ -69,10 +69,15 @@
 	    <br />
 	    <br />
 	    Mer informasjon om fadderopplegget finnes <a href="nystudent">her.</a>
-	  </p>
+        </p>
+        <img src="https://nabla.no/media/uploads/news_pictures/56478616_305187903480871_3493708702748246016_n.jpg" style="width: 100%;" height="400">
+        <br>
+        <br>
 	  <span class="GDPRinfo">Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla. Derfor må du som ny student oppgi kontaktopplysninger selv.</span>
 	</div>
 	{% endif %}
+
+<!-- New student pop-up end -->
 
 
     <div id = "content">
