Adds links to the "fadderperiode" facebook group and to the english pages to the new student popup

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,9 @@
 	    Registreringen tar 10 sekunder, og vi understreker igjen at det er viktig at du gjør dette! Gjør dette nå, og så kan du lese resten av informasjonen senere.
 	    <br />
 	    <br />
-	    Mer informasjon om fadderopplegget finnes <a href="nystudent">her.</a>
+	    Mer informasjon om fadderopplegget finnes <a href="nystudent">her.</a><br>
+        Meld deg også inn i facebook-gruppen for fadderperioden 2019 <a href="https://www.facebook.com/groups/2050067498621475/"> her.</a><br>
+        <b>New international student?</b> Read more about Nabla on our english pages <a href="english">here.</a>
         </p>
         <img src="https://nabla.no/media/uploads/news_pictures/56478616_305187903480871_3493708702748246016_n.jpg" style="width: 100%;" height="400">
         <br>
