--- a/nablapps/qrTickets/templates/qrTickets/register.html
+++ b/nablapps/qrTickets/templates/qrTickets/register.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Registrer</h1>
+<h1>Registrer billett</h1>
+
+<form method="POST">
+    {% csrf_token %}
+    <button type="submit">Registrer</button>
+</form>
+
 {% endblock %}
