Gjorde popupen utholdelig på mobil

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,9 @@
                             Det er derfor veldig viktig at du trykker på knappen under og registrerer deg!
                         </p>
                         <br>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZ9L6WnlyGTlfl3tauTFs0QGlUa20qwq4_aPgELNmmtA-8TQ/viewform?usp=sf_link"  class="btn btn-primary center-block btn-lg">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZ9L6WnlyGTlfl3tauTFs0QGlUa20qwq4_aPgELNmmtA-8TQ/viewform?usp=sf_link"
+                           class="btn btn-primary center-block btn-lg"
+                           style="white-space:normal">
                             Trykk her for påmelding til fadderperioden - <b>viktig!</b>
                         </a>
                         <br>
@@ -105,7 +107,7 @@
                             </a>
                         </div>
                         <br>
-                        <img src="https://nabla.no/media/uploads/news_pictures/56478616_305187903480871_3493708702748246016_n.jpg" style="width: 100%;" height="300">
+                        <img src="https://nabla.no/media/uploads/news_pictures/56478616_305187903480871_3493708702748246016_n.jpg" style="width: 100%;">
                         <small>
                             Grunnet nye personvernsregler i EU, GDPR, kan ikke universitetet gi ut lister over nye studenter til Nabla.
                             Derfor må du som ny student oppgi kontaktopplysninger selv.
