Some cosmetic updates

--- a/nablapps/qrTickets/templates/qrTickets/render.html
+++ b/nablapps/qrTickets/templates/qrTickets/render.html
@@ -4,8 +4,13 @@
 {% block content %}
 <h1> Din billett: </h1>
 
+<h2> Scan QR-koden: </h2>
 {% qr_from_text '{{ ticket_url }}' size="M" image_format="png" %}
-<h1>{{ ticket_url }}</h1>
+
+<h2> Eller følg denne url-en: </h2>
+<h3>{{ ticket_url }}</h3>
+
+<h2> for å registrere oppmøte. </h2>
 {% endblock %}
 
 
