--- a/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
+++ b/nablapps/officeCalendar/templates/officeCalendar/includes/list.html
@@ -8,30 +8,45 @@ office_events is a dictionary with weekday as key and a list of events as value
 {% addtoblock "css" %}
 <style>
  /* Office calendar */
- 
- th {
-     border-bottom: 1px solid grey;
-     color: grey;
+ #office_calendar th {
+     border-bottom: 1px solid lightgray;
+     padding: 0px 10px;
  }
 
- td {
-     padding: 2px 4px;
+ #office_calendar th.no_border {
+    border: 0;
  }
 
- tr.event.has_description {
+ #office_calendar td {
+    padding: 0px 15px 4px;
+ }
+
+ #office_calendar tr.event.has_description {
      cursor: help;
  }
 
  #office_calendar {
+     table-layout: fixed;
      width: 100%;
+     border-bottom: 5px solid black;
+     border-top: 5px solid black;
+     border-left: 1px solid #D0D0D0;
+     border-right: 1px solid #D0D0D0;
+     box-shadow:  0 0 2px rgba(0, 0, 0, 0.24);
+     word-break: break-all;
  }
+
 
 </style>
 {% endaddtoblock %}
 
-<p style="margin: 0"><b>Kontoret denne uka:</b></p>
-
 <table id="office_calendar">
+    <col width="20%">
+    <col width="50%">
+    <col width="30%">
+    <tr >
+        <th colspan="3" class="no_border"> <h4><b>Kontoret denne uka:</b></h4> </th>
+    </tr>
     {% for event in office_events %}
     {% ifchanged event.start_time.date|date:"w" %}
     <tr>
@@ -44,11 +59,11 @@ office_events is a dictionary with weekday as key and a list of events as value
     {% else %}
     <tr class="event">
     {% endif %}
-       
-        <td>{{ event.start_time|date:"H:i"}}</td>
-        <td>{{ event.title }}</td>
-        <td>{{ event.duration_natural  }}</td>
+        <td> {{ event.start_time|date:"H:i"}} </td>
+        <td> {{ event.title }} </td>
+        <td> {{ event.duration_natural  }} </td>
     </tr>
     {% endfor %}
 </table>
+
 {% endif %}
