Adds placeholder text for varslingsskjema.

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -42,6 +42,13 @@
 {% endblock %}
 
 {% block sidebar %}
+<h1>Nablas varslingsskjema</h1>
+<p>Tekst om varslingsskjema. <a href=""> Link til skjema.</a> </p>
+
+<h1>Ressursbank</h1>
+<p>Tekst om ressursbank. <a href=""> Link til ressursbank.</a> </p>
+
+
 <h1>Nablas forslagskasse</h1>
 
 <p>Har du en superkul idé til noe nytt vi kan gjøre i Nabla? Savner du noe, eller har du en tilbakemelding til oss som drifter linjeforeningen?
