--- a/templates/base.html
+++ b/templates/base.html
@@ -350,6 +350,11 @@
                     <div class="col-md-4 center" id="nablafooter">
                         <br><br>
                         <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
+                        <br />
+                        <br />
+                        <a href="https://www.facebook.com/nablantnu/" class="fa fa-facebook fa-4x social-icon"></a>
+                        <a href="https://www.instagram.com/nablalinjeforening/" class="fa fa-instagram fa-4x social-icon"></a>
+                        <a href="https://nablantnu.slack.com/" class="fa fa-slack fa-4x social-icon"></a>
                     </div>
 
             </div>
