Adds link to and text about 'avviksvarsling' and 'ressursbanken'.

--- a/nablapps/contact/templates/contact/contact.html
+++ b/nablapps/contact/templates/contact/contact.html
@@ -42,11 +42,12 @@
 {% endblock %}
 
 {% block sidebar %}
-<h1>Nablas varslingsskjema</h1>
-<p>Tekst om varslingsskjema. <a href=""> Link til skjema.</a> </p>
+<h1>Avviksvarsling</h1>
+<p>Nabla har et system for varsling dersom noe ubehagelig skulle skje, enten det gjelder problemer med rus, hendelse på vors eller noe annet. Styret mottar svar gjennom dette skjemaet, og har taushetsplikt.
+Det går selvfølgelig også an å snakke med en av oss i styret direkte hvis det skulle være noe. <a href="https://docs.google.com/forms/d/1JqdkmbZX60HaG6C5f7_BK7FAaN73XIZkZd34F5Y9rTI/viewform?fbclid=IwAR348vkMu9zl-lnGGprwDprkNf3Rmt1xQpsCfXLs1wzDb_P6kyHjoaRE--4&edit_requested=true"> Link til skjema.</a> </p>
 
 <h1>Ressursbank</h1>
-<p>Tekst om ressursbank. <a href=""> Link til ressursbank.</a> </p>
+<p>Hvem kan hjelpe med hva? Ressursbanken er et dokument, utarbeidet av HR-forum, med hensikt om å være en enkel oversikt over forskjellige kontaktpunkter som kan bidra i ulike saker.<a href="https://drive.google.com/open?id=1huAUp49lzXWKBmj-20xxHJT8VtYxni__"> Link til ressursbank.</a> </p>
 
 
 <h1>Nablas forslagskasse</h1>
