--- a/nablapps/nabladet/templates/nabladet/nablad_list.html
+++ b/nablapps/nabladet/templates/nabladet/nablad_list.html
@@ -124,6 +124,7 @@
 </div>
   {% endfor %}
 
+<a href="/contact/gullkorn/" class="btn btn-primary" >Lyst til å melde inn et gullkorn eller sitat?</a>
 <p class="footer-info">Nabladet er vårt kjære tidsskrift, som blir publisert av redaksjonen flere ganger i semesteret.</p> 
 {% endblock main %}
 
