Implement session-based solution for quizreplies
Quizreplies are no longer created when the user opens the quiz, which
alleviates the issue of "empty" responses.
When the user starts a quiz a uuid is generated for that quizreply, and
the start-time is stored in the user's session. The uuid for the
quizreply is included as a hidden value in the POST request, and is used
to recall the start-time when the user submits their answers.

--- a/nablapps/interactive/templates/interactive/quiz.html
+++ b/nablapps/interactive/templates/interactive/quiz.html
@@ -48,6 +48,7 @@ jQuery(function ($) {
         </li>
     </ul>
 {% endfor %}
+    <input type="hidden" name="quiz_reply_id" value="{{ view.quiz_reply_id }}"/>
     <button type="submit" class="btn btn-primary">
         Send inn
     </button>
